fixed the overlap between news and search on the nav bar

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/base/_global-nav.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/base/_global-nav.scss
@@ -647,7 +647,7 @@
 
   .top-bar-right .menu>li {
     >a:link {
-      @media screen and (min-width: 800px) and (max-width:950px) {
+      @media screen and (min-width: 800px) and (max-width:1024px) {
         padding: 2rem .5rem;
       }
 
